@@ -111,8 +111,9 @@ format(x, \dots)
   representations of the elements of the first argument \code{x}
   in a common format, and in the current locale's encoding.
 
-  For numeric or complex \code{x}, dims and dimnames are preserved on
-  matrices/arrays and names on vectors: no other attributes are copied.
+  For character, numeric, complex or factor \code{x}, dims and dimnames
+  are preserved on matrices/arrays and names on vectors: no other
+  attributes are copied.
 
   If \code{x} is a list, the result is a character vector obtained by
   applying \code{format.default(x, \dots)} to each element of the list
